# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_logging",
    version = "0.0.3",
    compatibility_level = 0,
)

bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "googletest", version = "1.14.0")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

# Rust rules for Bazel
bazel_dep(name = "rules_rust", version = "0.61.0")

# C/C++ rules for Bazel
bazel_dep(name = "rules_cc", version = "0.1.1")

# Configure the host toolchain.
bazel_dep(name = "score_toolchains_gcc", version = "0.4", dev_dependency = True)

gcc = use_extension("@score_toolchains_gcc//extentions:gcc.bzl", "gcc", dev_dependency = True)
gcc.toolchain(
    sha256 = "457f5f20f57528033cb840d708b507050d711ae93e009388847e113b11bf3600",
    strip_prefix = "x86_64-unknown-linux-gnu",
    url = "https://github.com/eclipse-score/toolchains_gcc_packages/releases/download/0.0.1/x86_64-unknown-linux-gnu_gcc12.tar.gz",
)
gcc.extra_features(
    features = [
        "minimal_warnings",
        "treat_warnings_as_errors",
    ],
)
gcc.warning_flags(
    minimal_warnings = [
        "-Wall",
        "-Wno-error=deprecated-declarations",
        "-Wno-error=narrowing",
    ],
    strict_warnings = [
        "-Wextra",
        "-Wpedantic",
    ],
)
use_repo(gcc, "gcc_toolchain", "gcc_toolchain_gcc")

register_toolchains(
    "@gcc_toolchain//:host_gcc_12",
    dev_dependency = True,
)

bazel_dep(name = "aspect_rules_lint", version = "1.0.3")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")
bazel_dep(name = "score_bazel_platforms", version = "0.0.2")
bazel_dep(name = "score_docs_as_code", version = "2.0.2")
bazel_dep(name = "score_tooling", version = "1.0.4")

# Code deps
bazel_dep(name = "score_baselibs", version = "0.2.0")
git_override(
    module_name = "score_baselibs",
    commit = "59dba065def85e3c7fb38e08f0d4cb04cc693b2f",
    remote = "https://github.com/eclipse-score/baselibs.git",
)

# bazel_dep(name = "score_crates", version = "0.0.3")
