# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

bazel_dep(name = "score_logging", version = "0.0.0")
local_path_override(
    module_name = "score_logging",
    path = "..",
)

bazel_dep(name = "score_baselibs", version = "0.2.8")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "score_communication", version = "0.2.1")

# Due to incoming transitive deps from baselibs flatbuffers module.
# FIXME: To be removed after https://github.com/eclipse-score/baselibs/issues/266 is resolved
single_version_override(
    module_name = "grpc-java",
    version = "1.70.0",
)
